--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home Page</title>
+    <!-- Meta Information -->
+    <title>Food App</title>
 
+    <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
+    <!-- Vendor JS -->
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
+
+    <!-- App JS -->
+
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <nav>
+      <img src="" alt="Dragon">
+      <h2>Camilo's Cafe</h2>
+      <img src="" alt="Cart">
+    </nav>
+  <main>
+    <section>
+      <div class="menu_category">
+        <img src="" alt="sandwitch">
+        <img src="" alt="soup">
+        <img src="" alt="salad">
+        <img src="" alt="Drinks">
+      </div>
+    </section>
+
+    <section>
+      <div class="meal_items">
+        <img src="" alt="BLT">
+        <div class="meal_items_container">
+          <span class="heading">
+            Heading
+          </span>
+          <span class="heading">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis ratione unde voluptatibus sapiente deserunt voluptate culpa nam non suscipit architecto, eos ullam perspiciatis, quasi laboriosam tenetur neque facere aliquam.
+          </span>
+          <span class="quantity_price">
+            quantity, price
+          </span>
+        </div>
+      </div>
+    </section>
+  </main>
+
+
   </body>
 </html>
