--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Righteous|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6ba3f5c144.js" crossorigin="anonymous"></script>
 
     <!-- Vendor JS -->
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
@@ -22,12 +24,20 @@
   </head>
 
   <body>
-
+  <header>
     <nav>
-      <img src="" alt="Dragon">
-      <h2>Camilo's Cafe</h2>
-      <img src="/images/dragon10.png" alt="Cart">
+
+      <div></div>
+
+      <div class="restaurant_name">
+        <img src="/images/dragon12.png" alt="dragon">
+        <span class="space_between"></span>
+        <h2>Camilo's Cafe</h2>
+      </div>
+
+        <img src="/images/cart7.png" alt="Cart">
     </nav>
+  </header>
   <main>
     <section>
       <div class="menu_category">
