--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,9 +29,9 @@
 
       <div></div>
 
-      <div class="restaurant_name">
+      <div class="restaurant-name">
         <img src="/images/dragon12.png" alt="dragon">
-        <span class="space_between"></span>
+        <span class="space-between"></span>
         <h2>Camilo's Cafe</h2>
       </div>
 
@@ -40,11 +40,32 @@
   </header>
   <main>
     <section>
-      <div class="menu_category">
-        <img src="/images/sandwich7.png" alt="sandwich">
-        <img src="/images/soup2.png" alt="soup">
-        <img src="/images/salad2.png" alt="salad">
-        <img src="/images/drink2.png" alt="drinks">
+      <div class="conainer-lg menu-category">
+        <div class="row">
+          <!--
+          <div class="col-lg-2"></div>
+          -->
+          <div class="col-lg-3 sandwich">
+            <img src="/images/sandwich7.png" alt="sandwich">
+            <p>sandwich</p>
+
+          </div>
+          <div class="col-lg-3">
+            <img src="/images/soup2.png" alt="soup">
+            <p>soup</p>
+          </div>
+          <div class="col-lg-3">
+            <img src="/images/salad2.png" alt="salad">
+            <p>salad</p>
+          </div>
+          <div class="col-lg-3">
+            <img src="/images/drink2.png" alt="drink">
+            <p>drink</p>
+          </div>
+          <!--
+          <div class="col-lg-2"></div>
+          -->
+        </div>
       </div>
     </section>
 
