--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,15 +32,15 @@
       <div class="restaurant-name">
         <img src="/images/dragon12.png" alt="dragon">
         <span class="space-between"></span>
-        <h2>Camilo's Cafe</h2>
+        <h2>Camilo<span>'s</span> Cafe</h2>
       </div>
 
         <img src="/images/cart7.png" alt="Cart">
     </nav>
   </header>
   <main>
-    <section>
-      <div class="conainer-lg menu-category">
+    <section class="menu-category">
+      <div class="conainer-lg">
         <div class="row">
           <!--
           <div class="col-lg-2"></div>
@@ -48,7 +48,6 @@
           <div class="col-lg-3 sandwich">
             <img src="/images/sandwich7.png" alt="sandwich">
             <p>sandwich</p>
-
           </div>
           <div class="col-lg-3">
             <img src="/images/soup2.png" alt="soup">
@@ -62,17 +61,51 @@
             <img src="/images/drink2.png" alt="drink">
             <p>drink</p>
           </div>
-          <!--
-          <div class="col-lg-2"></div>
-          -->
+
         </div>
       </div>
     </section>
 
-    <section>
-      <div class="meal_items">
-        <img src="" alt="BLT">
-        <div class="meal_items_container">
+    <section class="meal-items">
+      <div class="conainer-lg">
+
+
+        <div class="row meal-items-row">
+          <div class="col-lg-3 sandwich">
+            <img src="/images/sandwich7.png" alt="BLT">
+          </div>
+
+          <div class="col-lg-9 meal-items-row-container">
+              <div class="row meal-items-row">
+                  <div class="col-lg-8 meal-items-row-description">
+                      <span class="heading">
+                          <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis ratione unde voluptatibus sapiente deserunt voluptate culpa nam non suscipit architecto, eos ullam perspiciatis, quasi laboriosam tenetur neque facere aliquam.
+                          </p>
+                        </span>
+                  </div>
+                  <div class="col-lg-1">
+                  </div>
+                  <div class="col-lg-3 price-quantity">
+                    <span>
+                      <div>
+                        quantity
+                      </div>
+                      <p>
+                        price
+                      </p>
+                    </span>
+                  </div>
+              </div>
+
+          </div>
+          </div>
+
+        </div>
+
+      </div>
+
+        <!--
           <span class="heading">
             Heading
           </span>
@@ -83,7 +116,8 @@
             quantity, price
           </span>
         </div>
-      </div>
+        -->
+
     </section>
   </main>
 
