1. CSS: applied border-round to each container 2. 2nd trail AJAX - meal items (soup, salad, drinks)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,19 +48,19 @@
       <div class="conainer-lg">
         <div class="row">
 
-          <div class="col-lg-3 sandwich">
-            <img src="/images/sandwich7.png" alt="sandwich" id="sandwich">
+          <div class="col-lg-3 sandwich" id="sandwich">
+            <img src="/images/sandwich7.png" alt="sandwich">
             <p>sandwich</p>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3" id="soup">
             <img src="/images/soup2.png" alt="soup">
             <p>soup</p>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3" id="salad">
             <img src="/images/salad2.png" alt="salad">
             <p>salad</p>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3" id="drinks">
             <img src="/images/drink2.png" alt="drink">
             <p>drink</p>
           </div>
