--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -28,11 +28,6 @@ body {
     font-size: 2.5rem;
   }
 
-  .restaurant-name h2 span {
-    font-size:1.5rem;
-    font-family: 'Source Sans Pro';
-    height: 120%;
-  }
 
   .space-between {
     width: 3rem;
@@ -41,6 +36,7 @@ body {
   .menu-category {
     margin: 50px;
     background-color: #EEE;
+    border-radius: 10px;
     border: 3px solid gray;
     padding: 20px 20px;
     text-align: center;
@@ -50,9 +46,8 @@ body {
   /* meal-items-containers */
 
   .meal-items {
-
     background-color: #EEE;
-
+    border-radius: 10px;
     padding: 20px 0px;
     margin: 50px 100px;
     text-align: center;
@@ -96,6 +91,7 @@ body {
   .place-order {
     margin: 50px;
     background-color: #EEE;
+    border-radius: 10px;
     border: 2px solid gray;
     padding: 20px 0px;
     margin: 50px 100px;
@@ -111,6 +107,7 @@ body {
 
   div.col-lg-7.total-price {
     border: 3px solid gray;
+    border-radius: 10px;
     text-align: center;
     padding: 20px 0px;
   }
