--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -56,6 +56,10 @@ body {
     font-weight: bold;
   }
 
+  .col-lg-3.my-auto h3 {
+    font-family: 'Bungee', cursive;
+  }
+
   span.heading p {
     text-align: justify;
   }
@@ -74,12 +78,13 @@ body {
   }
 
   div.col-lg-9.meal-items-row-container {
-
     border: 3px solid gray;
+    border-radius: 10px;
   }
 
   div.col-lg-3.price-quantity {
     border: 3px solid gray;
+    border-radius: 10px;
     margin-top: 20px;
     text-align: center;
     font-family: 'Source Sans Pro', sans-serif;
@@ -99,6 +104,10 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
+  }
+
+  div.row.meal-items-row {
+    padding: 5px 0px;
   }
 
   div.row.nested-place-order-row {
@@ -129,7 +138,7 @@ body {
   div.col-lg-1.tip {
     border: 3px solid gray;
     padding: 10px 0px;
-    margin: 0px 10px;
+    margin: 0px 5px;
 
   }
   div.col-lg-2.tip {
