add addToCart script and test html items

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,15 @@
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/addToCart.js"></script>
   </head>
 
   <body>
     <h1>Hello World!</h1>
+    <a href = "/login/1">Logged in as: Client #1</a>
+    <button type = "button" class= "add-to-cart" id="1"> Click to add Cart!</button>
+    <button type = "button" class= "add-to-cart" id="2"> Click to add Cart!</button>
+    <button type = "button" class= "add-to-cart" id="3"> Click to add Cart!</button>
+    <button type = "button" class= "add-to-cart" id="4"> Click to add Cart!</button>
   </body>
 </html>
