update script ordering

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,23 +14,6 @@
 
     <!-- Vendor JS -->
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
-<<<<<<< HEAD
-    <script type="text/javascript" src="/scripts/addToCart.js"></script>
-  </head>
-
-  <body>
-    <h1>Hello World!</h1>
-    <a href = "/login/1">Logged in as: Client #1</a>
-    <button type = "button" class= "add-to-cart" id="1"> Click to add Cart!</button>
-    <button type = "button" class= "add-to-cart" id="2"> Click to add Cart!</button>
-    <button type = "button" class= "add-to-cart" id="3"> Click to add Cart!</button>
-    <button type = "button" class= "add-to-cart" id="4"> Click to add Cart!</button>
-=======
-
-    <!-- App JS -->
-    <script type="text/javascript" src="/scripts/menuCategory.js"></script>
-
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -41,7 +24,9 @@
   <header>
     <nav>
 
-      <div></div>
+      <div>
+        <a href="/login/1">Logged in as Client #1</a>
+      </div>
 
       <div class="restaurant-name">
         <img src="/images/dragon12.png" alt="dragon">
@@ -134,13 +119,10 @@
 
   </main>
 
-  <!-- Bootstrap JS -->
-  <!--
-    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  -->
->>>>>>> master
+   <!-- App JS -->
+   <script type="text/javascript" src="/scripts/addToCart.js"></script>
+   <script type="text/javascript" src="/scripts/app.js"></script>
+   <script type="text/javascript" src="/scripts/menuCategory.js"></script>
+
   </body>
 </html>
