1. HTML create new-order container 2. CSS new-order

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -147,4 +147,24 @@ body {
     border: 3px solid gray;
     padding: 10px 0px;
   }
+
+
+  /* new-order-container */
+
+  .new-order {
+    margin: 50px;
+    background-color: #EEE;
+    border-radius: 10px;
+    border: 3px solid gray;
+    padding: 20px 20px;
+    text-align: center;
+    font-family: 'Bungee', cursive;
+  }
+
+  /*
+
+  div.row.new-order-row {
+    border: 3px solid gray;
+  }
+  */
 }
