added counter and basic styling

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -15,6 +15,11 @@ body {
     align-items: center;
 
     padding: 20px 50px;
+
+    .cart {
+      padding: 0.5rem;
+      font-size: 1.75rem;
+    }
   }
 
   .restaurant-name {
