--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,8 +33,10 @@
         <span class="space-between"></span>
         <h2>Camilo<span>'s</span> Cafe</h2>
       </div>
-
+      <div class="cart">
+        <span id="cart-counter">0</span>
         <img src="/images/cart7.png" alt="Cart">
+      </div>
     </nav>
   </header>
   <main>
