1. HTML: basic layout of new-order 2. CSS: basic layout of new-order

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,16 +123,59 @@
     <section class="new-order">
       <div class="conainer-lg">
         <div class="row new-order-row">
-          <div class="col-lg-1 bell">bell</div>
-          <div class="col-lg-1 avatar">avatar</div>
-          <div class="col-lg-8 order-list">order-list</div>
-          <div class="col-lg-2 decision-sms">decision-sms</div>
+          <div class="col-lg-1 bell my-auto">
+            <img src="/images/bell2.png" alt="bell">
+          </div>
+          <div class="col-lg-1 avatar">
+            <p>New Order #</p>
+            <img src="/images/user-circle3.png" alt="user">
+          </div>
+          <div class="col-lg-1 my-auto"></div>
+          <div class="col-lg-6 order-list my-auto">order-list</div>
+          <div class="col-lg-1 my-auto"></div>
+          <div class="col-lg-2 decision-sms my-auto">
+            <div>
+              <img src="/images/check-mark3.png" alt="check-mark">
+              <img src="/images/x-mark3.png" alt="x-mark">
+            </div>
+            <br>
+            <div class="sms">
+              sms
+            </div>
+          </div>
 
         </div>
       </div>
     </section>
 
+    <!-- new-order -->
+    <section class="new-order">
+      <div class="conainer-lg">
+        <div class="row new-order-row">
+          <div class="col-lg-1 bell my-auto">
+            <img src="/images/bell2.png" alt="bell">
+          </div>
+          <div class="col-lg-1 avatar">
+            <p>New Order #</p>
+            <img src="/images/user-circle3.png" alt="user">
+          </div>
+          <div class="col-lg-1 my-auto"></div>
+          <div class="col-lg-6 order-list my-auto">order-list</div>
+          <div class="col-lg-1 my-auto"></div>
+          <div class="col-lg-2 decision-sms my-auto">
+            <div>
+              <img src="/images/check-mark3.png" alt="check-mark">
+              <img src="/images/x-mark3.png" alt="x-mark">
+            </div>
+            <br>
+            <div class="sms">
+              sms
+            </div>
+          </div>
 
+        </div>
+      </div>
+    </section>
 
 
 
