--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -161,6 +161,18 @@ body {
     font-family: 'Bungee', cursive;
   }
 
+  div.sms {
+    background-color: #EEE;
+    border-radius: 10px;
+    border: 3px solid gray;
+  }
+
+  div.col-lg-6.order-list {
+    background-color: #EEE;
+    border-radius: 10px;
+    border: 3px solid gray;
+  }
+
   /*
 
   div.row.new-order-row {
