1. HTML: 1st basic layout of pick-up 2. CSS: 1st basic layout of pick-up

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -173,10 +173,15 @@ body {
     border: 3px solid gray;
   }
 
-  /*
+  /* pick-up */
 
-  div.row.new-order-row {
+  .pick-up {
+    margin: 50px;
+    background-color: #EEE;
+    border-radius: 10px;
     border: 3px solid gray;
+    padding: 20px 20px;
+    text-align: center;
+    font-family: 'Bungee', cursive;
   }
-  */
 }
