--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,7 +128,7 @@
           </div>
           <div class="col-lg-1 avatar">
             <p>New Order #</p>
-            <img src="/images/user-circle3.png" alt="user">
+            <img src="/images/user2.png" alt="user">
           </div>
           <div class="col-lg-1 my-auto"></div>
           <div class="col-lg-6 order-list my-auto">order-list</div>
@@ -148,31 +148,54 @@
       </div>
     </section>
 
-    <!-- new-order -->
-    <section class="new-order">
+    <!-- pick-up -->
+    <section class="pick-up">
       <div class="conainer-lg">
-        <div class="row new-order-row">
-          <div class="col-lg-1 bell my-auto">
-            <img src="/images/bell2.png" alt="bell">
+        <div class="row pick-up-row">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-4 text-left">
+            <p>
+              <h2>COMPLTETED</h2>
+            </p>
+            <p>
+              <h2>READY FOR PICK UP</h2>
+            </p>
           </div>
-          <div class="col-lg-1 avatar">
-            <p>New Order #</p>
-            <img src="/images/user-circle3.png" alt="user">
+          <div class="col-lg-2"></div>
+          <div class="col"></div>
+          <div class="w-100"></div>
+          <div class="col-lg-1 my-auto"></div>
+          <div class="col-lg-2 my-auto">
+            <img src="/images/user-circle3.png" alt="user-circle3"><br>
+            <p>
+              new-order #
+            </p>
+          </div>
+          <div class="col-lg-2 my-auto">
+            <img src="/images/user-circle3.png" alt="user-circle3"><br>
+            <p>
+              new-order #
+            </p>
+          </div>
+          <div class="col-lg-2 my-auto">
+            <img src="/images/user-circle3.png" alt="user-circle3"><br>
+            <p>
+              new-order #
+            </p>
+          </div>
+          <div class="col-lg-2 my-auto">
+            <img src="/images/user-circle3.png" alt="user-circle3"><br>
+            <p>
+              new-order #
+            </p>
+          </div>
+          <div class="col-lg-2 my-auto">
+            <img src="/images/user-circle3.png" alt="user-circle3"><br>
+            <p>
+              new-order #
+            </p>
           </div>
           <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-6 order-list my-auto">order-list</div>
-          <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-2 decision-sms my-auto">
-            <div>
-              <img src="/images/check-mark3.png" alt="check-mark">
-              <img src="/images/x-mark3.png" alt="x-mark">
-            </div>
-            <br>
-            <div class="sms">
-              sms
-            </div>
-          </div>
-
         </div>
       </div>
     </section>
