HTML | CSS: 1st basic layout of upcomming-order

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -184,4 +184,17 @@ body {
     text-align: center;
     font-family: 'Bungee', cursive;
   }
+
+  /* up-comming order */
+
+  .upcomming-order {
+    margin: 50px;
+    background-color: #EEE;
+    border-radius: 10px;
+    border: 3px solid gray;
+    padding: 20px 20px;
+    text-align: center;
+    font-family: 'Bungee', cursive;
+  }
+
 }
