--- a/views/index.ejs
+++ b/views/index.ejs
@@ -131,7 +131,10 @@
             <img src="/images/user2.png" alt="user">
           </div>
           <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-6 order-list my-auto">order-list</div>
+          <div class="col-lg-6 order-list my-auto">
+            <p>order-list</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur minima ea pariatur enim fugit distinctio consequatur officia quam ipsam rerum. Non veniam cumque eum hic dicta laborum, sapiente dolor corrupti.</p>
+          </div>
           <div class="col-lg-1 my-auto"></div>
           <div class="col-lg-2 decision-sms my-auto">
             <div>
@@ -201,17 +204,31 @@
     </section>
 
 
-
+    <!-- Upcoming-order -->
+    <section class="upcomming-order">
+      <div class="conainer-lg">
+        <div class="row new-order-row">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-2 avatar">
+            <img src="/images/user-circle4.png" alt="user">
+          </div>
+          <div class="col-lg-6">
+            <p>order-list</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur minima ea pariatur enim fugit distinctio consequatur officia quam ipsam rerum. Non veniam cumque eum hic dicta laborum, sapiente dolor corrupti.</p>
+          </div>
+          <div class="col-lg-1"></div>
+          <div class="col-lg-2 sms my-auto">
+            <div>
+              sms
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
   </main>
 
-  <!-- Bootstrap JS -->
-  <!--
-    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  -->
+
   </body>
 </html>
