--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
       <div></div>
 
       <div class="restaurant-name">
-        <img src="/images/dragon12.png" alt="dragon">
+        <img src="/images/dragon-orange5.png" alt="dragon">
         <span class="space-between"></span>
         <h2>Camilo<span>'s</span> Cafe</h2>
       </div>
@@ -123,23 +123,47 @@
     <section class="new-order">
       <div class="conainer-lg">
         <div class="row new-order-row">
+
+          <div class="col-sm-2">
+            <p>New Order #</p>
+          </div>
+          <div class="col-sm">
+
+          </div>
+          <div class="w-100"></div>
+
           <div class="col-lg-1 bell my-auto">
             <img src="/images/bell2.png" alt="bell">
           </div>
-          <div class="col-lg-1 avatar">
-            <p>New Order #</p>
-            <img src="/images/user2.png" alt="user">
+          <div class="col-lg-1 my-auto"></div>
+          <div class="col-lg-2 text-center my-auto avatar">
+            <img src="/images/user3.png" alt="user">
+            <br>
+            <br>
+            <p>
+              mikymouse@amail.com
+            </p>
           </div>
           <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-6 order-list my-auto">
+          <div class="col-lg-4 order-list my-auto text-left">
             <p>order-list</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur minima ea pariatur enim fugit distinctio consequatur officia quam ipsam rerum. Non veniam cumque eum hic dicta laborum, sapiente dolor corrupti.</p>
+            <p>
+              cat_name('sandwich'): name('roast beef') price('$ 0.00')
+              cat_name('sandwich'): name('roast beef') price('$ 0.00')
+              cat_name('sandwich'): name('roast beef') price('$ 0.00')
+              Total Price: $ 10.00
+            </p>
+            <p>
+              Total Price: $ 10.00
+            </p>
           </div>
           <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-2 decision-sms my-auto">
-            <div>
+          <div class="col-lg-2 decision-sms align-top">
+            <div class="d-flex justify-content-between">
+
               <img src="/images/check-mark3.png" alt="check-mark">
               <img src="/images/x-mark3.png" alt="x-mark">
+
             </div>
             <br>
             <div class="sms">
@@ -171,31 +195,31 @@
           <div class="col-lg-2 my-auto">
             <img src="/images/user-circle4.png" alt="user-circle3"><br>
             <p>
-              new-order #
+              new-order 1
             </p>
           </div>
           <div class="col-lg-2 my-auto">
             <img src="/images/user-circle5.png" alt="user-circle3"><br>
             <p>
-              new-order #
+              new-order 2
             </p>
           </div>
           <div class="col-lg-2 my-auto">
             <img src="/images/user-circle6.png" alt="user-circle3"><br>
             <p>
-              new-order #
+              new-order 3
             </p>
           </div>
           <div class="col-lg-2 my-auto">
             <img src="/images/user-circle4.png" alt="user-circle3"><br>
             <p>
-              new-order #
+              new-order 4
             </p>
           </div>
           <div class="col-lg-2 my-auto">
             <img src="/images/user-circle5.png" alt="user-circle3"><br>
             <p>
-              new-order #
+              new-order 5
             </p>
           </div>
           <div class="col-lg-1 my-auto"></div>
@@ -209,12 +233,26 @@
       <div class="conainer-lg">
         <div class="row new-order-row">
           <div class="col-lg-1"></div>
-          <div class="col-lg-2 avatar">
+          <div class="col-lg-2 avatar my-auto">
             <img src="/images/user-circle4.png" alt="user">
+            <br>
+            <p>
+              mikymouse@amail.com
+            </p>
           </div>
           <div class="col-lg-6">
             <p>order-list</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur minima ea pariatur enim fugit distinctio consequatur officia quam ipsam rerum. Non veniam cumque eum hic dicta laborum, sapiente dolor corrupti.</p>
+            <div class="text-left">
+              <p>
+                cat_name('sandwich'): name('roast beef') price('$ 0.00')
+                cat_name('sandwich'): name('roast beef') price('$ 0.00')
+                cat_name('sandwich'): name('roast beef') price('$ 0.00')
+              </p>
+              <p>
+                Total Price: $ 10.00
+              </p>
+
+            </div>
           </div>
           <div class="col-lg-1"></div>
           <div class="col-lg-2 sms my-auto">
