--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
     <nav>
 
       <div>
-        <a href="/login/1">Logged in as Client #1</a>
+        <a href="/login/1">Login: Client #1</a>
       </div>
 
       <div class="restaurant-name">
@@ -86,7 +86,13 @@
                             <div class="conainer-lg">
                             </div>
                             <p>
-                              Total = $62.40
+                              Sub-total = $<span class="sub-total-cost">0</span>
+                            </p>
+                            <p>
+                              Tip = $<span class="total-tip">0</span>
+                            </p>
+                            <p>
+                              Total = $<span class="total-cost">0</span>
                             </p>
                           </div>
                           <div class="col-lg-2">
@@ -95,18 +101,20 @@
                               </p>
                           </div>
                           <div class="col-lg-3 place-order">
-                              <p>
-                              place order
-                              </p>
+                            <button type="button" id="place-order" class="btn btn btn-success btn-lg"> Place Order </button>
                           </div>
                       </div>
 
                       <div class="row nested-tip-row">
-                          <div class="col-lg-1 tip">10%</div>
+                          <div class="col-lg-2 tip">Add Tip: </div>
+                          <button type="button" class="btn btn-outline-info col-lg-1 10%-tip">10%</button>
+                          <button type="button" class="btn btn-outline-info col-lg-1 15%-tip">15%</button>
+                          <button type="button" class="btn btn-outline-info col-lg-1 20%-tip">20%</button>
+                          <button type="button" class="btn btn-outline-info col-lg-1 25-tip">25%</button>
+                          <!-- <div class="col-lg-1 tip">10%</div>
                           <div class="col-lg-1 tip">15%</div>
                           <div class="col-lg-1 tip">20%</div>
-                          <div class="col-lg-1 tip">25%</div>
-                          <div class="col-lg-2 tip">place order</div>
+                          <div class="col-lg-12 tip">Add Tip</div> -->
                           <div class="col-lg-5"></div>
 
                       </div>
@@ -124,7 +132,8 @@
    <!-- App JS -->
    <script type="text/javascript" src="/scripts/addToCart.js"></script>
    <script type="text/javascript" src="/scripts/app.js"></script>
-   <script type="text/javascript" src="/scripts/menuCategory.js"></script>
+   <script type="text/javascript" src="/scripts/menuItems.js"></script>
+   <script type="text/javascript" src="/scripts/cartItems.js"></script>
 
   </body>
 </html>
