--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/menuCategory.js"></script>
+    <script type="text/javascript" src="/scripts/restaurantViewsRender.js"></script>
 
 
     <!-- Bootstrap CSS -->
@@ -41,6 +42,12 @@
     </nav>
   </header>
   <main>
+
+
+    <!-- Temporary button for restaurnant views--> <!-- TOFIX-->
+    <button type="button" class="btn btn-danger" id="render-restaurant-views">Render Restaurnant Views</button>
+    <button type="button" class="btn btn-info" id="hide-restaurant-views">Toggle Restaurnant Views</button>
+
 
     <!-- menu category container -->
 
@@ -75,6 +82,13 @@
 
     </section>
 
+    <section id="restaurant-views" class="restaurant-views-render">
+
+    </section>
+
+    <section>
+
+    </section>
     <!-- place-order-container -->
     <section class="place-order">
         <div class="conainer-lg">
@@ -120,149 +134,14 @@
     </section>
 
     <!-- new-order -->
-    <section class="new-order">
-      <div class="conainer-lg">
-        <div class="row new-order-row">
 
-          <div class="col-sm-2">
-            <p>New Order #</p>
-          </div>
-          <div class="col-sm">
-
-          </div>
-          <div class="w-100"></div>
-
-          <div class="col-lg-1 bell my-auto">
-            <img src="/images/bell2.png" alt="bell">
-          </div>
-          <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-2 text-center my-auto avatar">
-            <img src="/images/user3.png" alt="user">
-            <br>
-            <br>
-            <p>
-              mikymouse@amail.com
-            </p>
-          </div>
-          <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-4 order-list my-auto text-left">
-            <p>order-list</p>
-            <p>
-              cat_name('sandwich'): name('roast beef') price('$ 0.00')
-              cat_name('sandwich'): name('roast beef') price('$ 0.00')
-              cat_name('sandwich'): name('roast beef') price('$ 0.00')
-              Total Price: $ 10.00
-            </p>
-            <p>
-              Total Price: $ 10.00
-            </p>
-          </div>
-          <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-2 decision-sms align-top">
-            <div class="d-flex justify-content-between">
-
-              <img src="/images/check-mark3.png" alt="check-mark">
-              <img src="/images/x-mark3.png" alt="x-mark">
-
-            </div>
-            <br>
-            <div class="sms">
-              sms
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
 
     <!-- pick-up -->
-    <section class="pick-up">
-      <div class="conainer-lg">
-        <div class="row pick-up-row">
-          <div class="col-lg-1"></div>
-          <div class="col-lg-4 text-left">
-            <p>
-              <h2>COMPLTETED</h2>
-            </p>
-            <p>
-              <h2>READY FOR PICK UP</h2>
-            </p>
-          </div>
-          <div class="col-lg-2"></div>
-          <div class="col"></div>
-          <div class="w-100"></div>
-          <div class="col-lg-1 my-auto"></div>
-          <div class="col-lg-2 my-auto">
-            <img src="/images/user-circle4.png" alt="user-circle3"><br>
-            <p>
-              new-order 1
-            </p>
-          </div>
-          <div class="col-lg-2 my-auto">
-            <img src="/images/user-circle5.png" alt="user-circle3"><br>
-            <p>
-              new-order 2
-            </p>
-          </div>
-          <div class="col-lg-2 my-auto">
-            <img src="/images/user-circle6.png" alt="user-circle3"><br>
-            <p>
-              new-order 3
-            </p>
-          </div>
-          <div class="col-lg-2 my-auto">
-            <img src="/images/user-circle4.png" alt="user-circle3"><br>
-            <p>
-              new-order 4
-            </p>
-          </div>
-          <div class="col-lg-2 my-auto">
-            <img src="/images/user-circle5.png" alt="user-circle3"><br>
-            <p>
-              new-order 5
-            </p>
-          </div>
-          <div class="col-lg-1 my-auto"></div>
-        </div>
-      </div>
-    </section>
+
 
 
     <!-- Upcoming-order -->
-    <section class="upcomming-order">
-      <div class="conainer-lg">
-        <div class="row new-order-row">
-          <div class="col-lg-1"></div>
-          <div class="col-lg-2 avatar my-auto">
-            <img src="/images/user-circle4.png" alt="user">
-            <br>
-            <p>
-              mikymouse@amail.com
-            </p>
-          </div>
-          <div class="col-lg-6">
-            <p>order-list</p>
-            <div class="text-left">
-              <p>
-                cat_name('sandwich'): name('roast beef') price('$ 0.00')
-                cat_name('sandwich'): name('roast beef') price('$ 0.00')
-                cat_name('sandwich'): name('roast beef') price('$ 0.00')
-              </p>
-              <p>
-                Total Price: $ 10.00
-              </p>
 
-            </div>
-          </div>
-          <div class="col-lg-1"></div>
-          <div class="col-lg-2 sms my-auto">
-            <div>
-              sms
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
 
   </main>
