--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,14 +107,10 @@
 
                       <div class="row nested-tip-row">
                           <div class="col-lg-2 tip">Add Tip: </div>
-                          <button type="button" class="btn btn-outline-info col-lg-1 10%-tip">10%</button>
-                          <button type="button" class="btn btn-outline-info col-lg-1 15%-tip">15%</button>
-                          <button type="button" class="btn btn-outline-info col-lg-1 20%-tip">20%</button>
+                          <button type="button" class="btn btn-outline-info col-lg-1 10-tip">10%</button>
+                          <button type="button" class="btn btn-outline-info col-lg-1 15-tip">15%</button>
+                          <button type="button" class="btn btn-outline-info col-lg-1 20-tip">20%</button>
                           <button type="button" class="btn btn-outline-info col-lg-1 25-tip">25%</button>
-                          <!-- <div class="col-lg-1 tip">10%</div>
-                          <div class="col-lg-1 tip">15%</div>
-                          <div class="col-lg-1 tip">20%</div>
-                          <div class="col-lg-12 tip">Add Tip</div> -->
                           <div class="col-lg-5"></div>
 
                       </div>
