HTML/ CSS: 1st basic waiting page in index.ejs for testing during HTML implementation

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -197,4 +197,14 @@ body {
     font-family: 'Bungee', cursive;
   }
 
+  .waiting {
+    margin: 50px;
+    background-color: #EEE;
+    border-radius: 10px;
+    border: 3px solid gray;
+    padding: 20px 20px;
+    text-align: center;
+    font-family: 'Bungee', cursive;
+  }
+
 }
