--- a/views/index.ejs
+++ b/views/index.ejs
@@ -140,10 +140,32 @@
 
 
 
-    <!-- Upcoming-order -->
+    <!-- upcoming-order -->
 
 
+    <!-- waiting-->
+    <section class="waiting">
+      <div class="conainer-lg">
+        <div class="row waiting-row">
+          <div class="col">
+            <img src="/images/step-bar5.png" alt="step-bar">
+          </div>
+          <div class="w-100"></div>
+          <div class="col-lg-1 my-auto"></div>
+          <div class="col-lg-1 my-auto"></div>
 
+          <div class="col-lg-2 my-auto">Choose your foods</div>
+          <div class="col-lg-1 my-auto"></div>
+
+          <div class="col-lg-2 my-auto">Order complete</div>
+          <div class="col-lg-1 my-auto"></div>
+          <div class="col-lg-2 my-auto">Ready for pickup</div>
+
+          <div class="col-lg-1 my-auto"></div>
+          <div class="col-lg-1 my-auto"></div>
+        </div>
+      </div>
+    </section>
   </main>
 
 
