HTML: 2nd change of waiting page for adding image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,6 @@
         <span class="space-between"></span>
         <h2>Camilo<span>'s</span> Cafe</h2>
       </div>
-
         <img src="/images/cart7.png" alt="Cart">
     </nav>
   </header>
@@ -165,6 +164,30 @@
           <div class="col-lg-1 my-auto"></div>
         </div>
       </div>
+      <br>
+      <br>
+      <br>
+
+
+      <div class="conainer-lg">
+        <div class="row waiting-row">
+          <div class="col-lg-4 my-auto"></div>
+          <div class="col-lg-4 my-auto">
+            <img src="/images/Catering3.png" alt="step-bar">
+            <span>Order #</span>
+            <p>
+              Thank you for your order<br>
+              Your order will be ready in 15 min<br>
+              Thank you
+            </p>
+            <p>
+              We will notify you via SMS message when it's ready to pick up
+            </p>
+          </div>
+          <div class="col-lg-4 my-auto"></div>
+        </div>
+      </div>
+
     </section>
   </main>
 
