1. change the name of image file of user-circle 2. initial works of ready for pickup when pushing order is ready

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -207,4 +207,9 @@ body {
     font-family: 'Bungee', cursive;
   }
 
+  #readyForPickupRow {
+    display: flex;
+    justify-content: flex-start;
+  }
+
 }
