upcoming order: when click place-order button, create avatar and order # in ready for pickup

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
     <!-- Temporary button for restaurnant views--> <!-- TOFIX-->
     <button type="button" class="btn btn-danger" id="render-restaurant-views">Render Restaurnant Views</button>
     <button type="button" class="btn btn-info" id="hide-restaurant-views">Toggle Restaurnant Views</button>
-    <button type="button" class="btn btn-warning" id="upcoming-order">Up coming order</button>
+    <button type="button" class="btn btn-warning" id="upcoming-order-button">Up coming order</button>
 
     <!-- menu category container -->
 
@@ -143,7 +143,7 @@
 
 
     <!-- upcoming-order -->
-
+    <section id="upcoming-order"></section>
 
     <!-- waiting-->
     <section class="waiting">
