create file as upComingOrder.js for move upComingOrder code from restauranView.js | Use Up coming order button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -197,6 +197,7 @@
   <!-- <script type="text/javascript" src="/scripts/menuCategory.js"></script> -->
   <script type="text/javascript" src="/scripts/restaurantViewsRender.js"></script>
   <script type="text/javascript" src="/scripts/readyForPickUp.js"></script>
+  <script type="text/javascript" src="/scripts/upComingOrder.js"></script>
    <!-- App JS -->
    <script type="text/javascript" src="/scripts/cartItems.js"></script>
    <script type="text/javascript" src="/scripts/menuItems.js"></script>
