--- a/views/index.ejs
+++ b/views/index.ejs
@@ -174,20 +174,13 @@
 
       <div class="conainer-lg">
         <div class="row waiting-row">
-          <div class="col-lg-4 my-auto"></div>
-          <div class="col-lg-4 my-auto">
+          <div class="col-lg-3 my-auto"></div>
+          <div class="col-lg-6 my-auto">
             <img src="/images/Catering3.png" alt="step-bar">
-            <span>Order #</span>
-            <p>
-              Thank you for your order<br>
-              Your order will be ready in 15 min<br>
-              Thank you
-            </p>
-            <p>
-              We will notify you via SMS message when it's ready to pick up
-            </p>
+            <div id="waitingOrderNumber"></div>
+
           </div>
-          <div class="col-lg-4 my-auto"></div>
+          <div class="col-lg-3 my-auto"></div>
         </div>
       </div>
 
