--- a/views/index.ejs
+++ b/views/index.ejs
@@ -129,6 +129,7 @@
    <script type="text/javascript" src="/scripts/cartItems.js"></script>
    <script type="text/javascript" src="/scripts/menuItems.js"></script>
    <script type="text/javascript" src="/scripts/addToCart.js"></script>
+   <script type="text/javascript" src="/scripts/placeOrder.js"></script>
    <script type="text/javascript" src="/scripts/app.js"></script>
 
   </body>
